--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auth-utilities",
-  "version": "1.0.0",
+  "version": "1.0.1-0",
   "description": "API authentication utilities",
   "main": "index.js",
   "scripts": {
